--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
 
 	<dependencies>
 		<dependency>
+  			<groupId>com.fasterxml.jackson.core</groupId>
+  			<artifactId>jackson-databind</artifactId>
+  			<version>[2.9.8,)</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<version>2.0.3.RELEASE</version>
